Feat: Update API schema and add chapter read/unread UI
- Updated the API schema in `openapi/api.yaml` to include more attribute types.
- Updated strings in `strings.xml` to include formats for volume and chapter, chapter read/unread status, group, and a no name available message.
- Unrelated: Updated `.idea/deploymentTargetSelector.xml`.

--- a/openapi/api.yaml
+++ b/openapi/api.yaml
@@ -5120,6 +5120,14 @@ components:
             - $ref: '#/components/schemas/ChapterAttributes'
             - $ref: '#/components/schemas/AuthorAttributes'
             - $ref: '#/components/schemas/CoverAttributes'
+            - $ref: '#/components/schemas/TagAttributes'
+            - $ref: '#/components/schemas/ScanlationGroupAttributes'
+            - $ref: '#/components/schemas/UserAttributes'
+            - $ref: '#/components/schemas/CustomListAttributes'
+            - $ref: '#/components/schemas/ApiClientAttributes'
+            - $ref: '#/components/schemas/MappingIdAttributes'
+            - $ref: '#/components/schemas/MangaRelationAttributes'
+            - $ref: '#/components/schemas/ReportAttributes'
     Chapter:
       title: Chapter
       type: object
