Fix: Update enums and schema in API definition
- Updated the `includeFutureUpdates` parameter schema in the `/chapter` endpoint to use integer enums (0, 1) instead of string enums ("0", "1").
- Changed the `includes` parameter in the `/chapter` endpoint to accept an array of strings by renaming it to `includes[]`.

--- a/openapi/api.yaml
+++ b/openapi/api.yaml
@@ -1815,7 +1815,6 @@ paths:
           name: excludedUploaders[]
         - schema:
             type: string
-            default: "1"
             enum: [ "0", "1" ]
           in: query
           name: includeFutureUpdates
@@ -1893,7 +1892,7 @@ paths:
                 - scanlation_group
                 - user
           in: query
-          name: includes
+          name: includes[]
       tags:
         - Chapter
       security: [ ]
@@ -2095,8 +2094,8 @@ paths:
           name: excludedUploaders[]
         - schema:
             type: string
-            default: "1"
-            enum: [ "0", "1" ]
+            default: 1
+            enum: [ 0, 1 ]
           in: query
           name: includeFutureUpdates
         - schema:
